Added welcome page

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,8 +3,8 @@
     <title>{{title}}</title>
   </head>
   <body>
-    <header>Sagar Sharma : N01481341</header>
+    <header>Sagar Sharma : N01481341 and Abhishek Kalhan : N01495445</header>
     {{{body}}}
-    <footer>sgrsharma720@gmail.com</footer>
+    <footer>sgrsharma720@gmail.com and abhishek.kalhan@gmail.com</footer>
   </body>
 </html>
